# ascii-art

./: .gitignore  CMakeLists.txt  Makefile
docs/: BMP-structure.md  PPM-structure.md
lib/inc/image/: bmp.h  image.h  ppm.h  stb_image_handler.h
lib/src/image/: bmp.c  image.c  ppm.c  stb_image_handler.c
src/: ascii-art.c
